<resources>
    <string name="app_name">EasyCooking</string>

    <string name="Stringa1">La mia dispensa</string>
    <string name="Stringa2">Inserisci in dispensa...</string>
    <string name="nome">Nome</string>
    <string name="quant">Quantità:</string>
    <string name="Data">Data di scadenza:</string>
    <string name="prodIns">Nome del prodotto da inserire...</string>
    <string name="quantIns">Quantità</string>
    <string name="aggProd">Aggiungi in dispensa</string>
    <string name="Stringa3">Le mie ricette</string>
    <string name="Stringa4">Cosa vuoi cucinare?</string>
    <string name="cat">Categoria:</string>
    <string name="naz">Origine:</string>
    <string name="go">Vai alla ricetta</string>
    <string name="accedi">Accedi</string>
    <string name="benvenuto">Che bello, sei tornato!!! Benvenuto.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="social">Usa uno dei tuoi profili social</string>
    <string name="dimenticato">Hai dimenticato la password?</string>
    <string name="registrati">Registrati</string>
    <string name="noreg">Continua senza registrarti</string>
    <string name="accetto">Accetto i termini di servizio e la privacy police</string>
    <string name="accountesist">Hai già un account? ACCEDI</string>
    <string name="spesa">Lista della spesa</string>
    <string name="compr">Cosa devo comprare?</string>
    <string name="ricetta">Scrivi la tua ricetta</string>
    <string name="img">Immagine:</string>
    <string name="vegano">Vegano</string>
    <string name="noglutine">Senza glutine</string>
    <string name="nolattosio">Senza lattosio</string>
    <string name="prep">Tempo di preparazione</string>
    <string name="cott">Tempo di cottura</string>
    <string name="tot">Tempo totale</string>
    <string name="intol">Intolleranze:</string>
    <string name="ingr">Ingredienti:</string>
    <string name="proc">Procedimento:</string>
    <string name="cognome">Cognome</string>
    <string name="inforequired">Per favore, inserisci tutte le informazioni richieste.</string>
    <string name="errorsignup">C\'è stato un errore nella registrazione: email o password non inseriti correttamente.</string>
    <string name="addio">Sei sicuro di voler andare via? </string>
    <string name="addio2">Se effettui il logout non avrai più possibilità di inserire le tue ricette.</string>
    <string name="resetPassword">Inserisci la tua mail per resettare la password</string>
    <string name="ButtonResetPassword">Resetta Password</string>

    <string-array name="Categoria">
        <item>-----</item>
        <item>Dolci</item>
        <item>Bevande &amp; Cocktail</item>
        <item>Pane &amp; Pizza</item>
        <item>Ricette base</item>
        <item>Marmellate &amp; Conserve</item>
        <item>Secondi Piatti</item>
        <item>Primi</item>
    </string-array>

    <string-array name="Origini">
        <item>-----</item>
        <item>Italiana</item>
        <item>Indiana</item>
        <item>Americana</item>
        <item>Cinese</item>
        <item>Francese</item>
        <item>Spagnola</item>
        <item>Giapponese</item>
        <item>Austriaca</item>
        <item>Marocchina</item>
        <item>Australiana</item>
        <item>Hawaiiana</item>
        <item>Brasiliana</item>
        <item>Cubana</item>
        <item>Inglese</item>
        <item>Messicana</item>
        <item>Polinesiana</item>
        <item>Portoricana</item>
        <item>Singaporiana</item>
        <item>Turca</item>
        <item>Tedesca</item>
        <item>Tunisina</item>
        <item>Greca</item>
        <item>Ungherese</item>
        <item>Svedese</item>
        <item>Africana</item>
        <item>SriLanka</item>
        <item>Taiwan</item>
        <item>Thailandese</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>