<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/frigologo" />

        <TextView
            android:id="@+id/titolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/bungee"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/bordeaux"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:text="@string/accedi"
            android:textColor="@color/rosso_chiaro"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:text="@string/benvenuto" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:text="@string/email"
            android:textColor="@color/bordeaux" />

        <EditText
            android:id="@+id/email_accedi"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="0dp"
            android:paddingStart="0dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:text="@string/password"
            android:textColor="@color/bordeaux" />

        <EditText
            android:id="@+id/psw_accedi"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="0dp"
            android:paddingStart="0dp" />

        <Button
            android:id="@+id/bottone_accedi"
            android:layout_width="180dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/rosso_chiaro"
            android:text="@string/accedi" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/bottone_gmail"
            android:layout_width="180dp"
            android:layout_height="44dp"
            android:layout_marginTop="2dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/gmail" />

        <TextView
            android:id="@+id/password_dimenticata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:text="@string/dimenticato" />

        <TextView
            android:id="@+id/registrati_accedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registratiView"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:text="@string/registrati"
            android:textColor="@color/arancione_scuro" />

        <TextView
            android:id="@+id/senza_registrazione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="senzaReg"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:text="@string/noreg"
            android:textColor="@color/bordeaux" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>