<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ResetPassword">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/frigologo" />

        <TextView
        android:id="@+id/titolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/bordeaux"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:text="@string/email"
        android:textColor="@color/rosso_chiaro"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:text="@string/resetPassword" />

        <EditText
            android:id="@+id/email_reset"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="0dp"
            android:paddingStart="0dp" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/rosso_chiaro"
            android:paddingStart="20dp"
            android:text="@string/ButtonResetPassword" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            style="?android:attr/progressBarStyleLarge">

        </ProgressBar>

    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>